Fixed blobs overflow

--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -62,6 +62,7 @@
 /* ==================== */
 .home-container .gradient-bg {
   position: absolute; /* Changed back from fixed */
+  overflow: hidden; 
   width: 100%;
   height: 100%;
   top: 0;
@@ -91,6 +92,7 @@
   position: absolute;
   mix-blend-mode: var(--blending);
   opacity: 0.8;
+  will-change: transform;
 }
 
 .home-container .g1 {
